config/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      serviceAccountName: mlflow-sa
      containers:
        - name: mlflow
          #TODO: Change the image to your own image
          image: lorenzocolombi99/mlflow-image:2
          imagePullPolicy: Always
          command: ["/bin/bash"]
          args:
            [
              "-c",
              "mlflow server \
              --backend-store-uri sqlite:///mlflow.db \
              --artifacts-destination s3://mlflow \
              --host 0.0.0.0
              --serve-artifacts"
            ]
          ports:
            - containerPort: 5000
          #setting env to accessing s3
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
